objects/ASI_CRM_Product_Document__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Image</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_FeedItemId__c</fullName>
        <label>FeedItemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FileId__c</fullName>
        <label>FileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_File_Ext__c</fullName>
        <label>File Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_File_Size__c</fullName>
        <label>File Size (KB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Image_URL__c</fullName>
        <formula>if(
CASE(LOWER( ASI_CRM_File_Ext__c )
, &apos;png&apos;, 1
, &apos;jpg&apos;, 1
, &apos;gif&apos;, 1
, &apos;jpeg&apos;, 1
, &apos;jfif&apos;, 1
, &apos;tiff&apos;, 1
,0) = 1
, &apos;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB120BY90&amp;versionId=&apos; &amp; ASI_CRM_FileId__c &amp; &apos;&amp;operationContext=CHATTER&apos;
, NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IsPOSProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPOSProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; ASI_CRM_FileId__c, ASI_CRM_File_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Preview__c</fullName>
        <formula>IF(ISBLANK(ASI_CRM_Image_URL__c), ASI_CRM_File_Name__c, IMAGE(ASI_CRM_Image_URL__c, ASI_CRM_File_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipName>Product_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POSM List</label>
    <listViews>
        <fullName>POSM_List</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SKU__c</columns>
        <columns>ASI_CRM_Preview__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_IsPOSProduct__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>POSM List</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Document No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POSM Lists</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Product_Document</fullName>
        <active>true</active>
        <label>ASI CRM SG Product Document</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>